test_regress/t/t_tagged_case.out
%Error-UNSUPPORTED: t/t_tagged_case.v:16:18: Unsupported: tagged union
   16 |    typedef union tagged {
      |                  ^~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_tagged_case.v:17:7: Unsupported: void (for tagged unions)
   17 |       void Invalid;
      |       ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:22:18: Unsupported: tagged union
   22 |    typedef union tagged packed {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:23:7: Unsupported: void (for tagged unions)
   23 |       void          Invalid;
      |       ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:31:18: Unsupported: tagged union
   31 |    typedef union tagged {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:32:7: Unsupported: void (for tagged unions)
   32 |       void        Invalid;
      |       ^~~~
%Error: t/t_tagged_case.v:46:11: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   46 |       v = tagged Invalid;
      |           ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_tagged_case.v:49:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   49 |          tagged Invalid : result = 1;
      |          ^~~~~~
%Error: t/t_tagged_case.v:52:162: syntax error, unexpected while
   52 |       do if ((result) !== (1)) begin $write("%%Error: %s:%0d:  got=%0x exp=%0x (%s !== %s)\n", "t/t_tagged_case.v",52, (result), (1), "result", "1"); $stop; end while(0);;
      |                                                                                                                                                                  ^~~~~
%Error: t/t_tagged_case.v:55:9: syntax error, unexpected '=', expecting '('
   55 |       v = tagged Valid (123);
      |         ^
%Error: t/t_tagged_case.v:57:16: syntax error, unexpected matches, expecting IDENTIFIER-for-type
   57 |       case (v) matches
      |                ^~~~~~~
%Error: t/t_tagged_case.v:64:10: syntax error, unexpected '=', expecting '('
   64 |       wt = tagged Wide60 (60'hFEDCBA987654321);
      |          ^
%Error: t/t_tagged_case.v:66:17: syntax error, unexpected matches, expecting IDENTIFIER-for-type
   66 |       case (wt) matches
      |                 ^~~~~~~
%Error: t/t_tagged_case.v:76:10: syntax error, unexpected '=', expecting '('
   76 |       wt = tagged Wide90 (90'hDE_ADBEEFCA_FEBABE12_3456);
      |          ^
%Error: t/t_tagged_case.v:78:17: syntax error, unexpected matches, expecting IDENTIFIER-for-type
   78 |       case (wt) matches
      |                 ^~~~~~~
%Error: t/t_tagged_case.v:88:10: syntax error, unexpected '=', expecting '('
   88 |       wt = tagged Byte8NonZeroLSB (8'hA5);
      |          ^
%Error: t/t_tagged_case.v:90:17: syntax error, unexpected matches, expecting IDENTIFIER-for-type
   90 |       case (wt) matches
      |                 ^~~~~~~
%Error: t/t_tagged_case.v:100:10: syntax error, unexpected '=', expecting '('
  100 |       wt = tagged Word32LittleEndian (32'hDEADBEEF);
      |          ^
%Error: t/t_tagged_case.v:102:17: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  102 |       case (wt) matches
      |                 ^~~~~~~
%Error: t/t_tagged_case.v:112:10: syntax error, unexpected '=', expecting '('
  112 |       at = tagged Arr '{10, 20, 30, 40};
      |          ^
%Error: t/t_tagged_case.v:114:17: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  114 |       case (at) matches
      |                 ^~~~~~~
%Error: t/t_tagged_case.v:122:10: syntax error, unexpected '=', expecting '('
  122 |       at = tagged Scalar (999);
      |          ^
%Error: t/t_tagged_case.v:124:17: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  124 |       case (at) matches
      |                 ^~~~~~~
%Error: Cannot continue
        ... This fatal error may be caused by the earlier error(s); resolve those first.
